# harness-eng

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  PROMPT.md  README.md  compare_runs.py  evaluate.py  evaluate_batch.py  pyproject.toml  run_workflow.py  tickets_evaluated.csv  tickets_evaluated_1.csv  tickets_evaluated_2.csv  tickets_evaluated_3.csv  tickets_evaluated_4.csv
clients/acme_corp/: config.yaml  functions.py  integration.py  workflow.yaml
clients/broken_corp/: config.yaml  integration.py
clients/globex/: config.yaml  integration.py
docs/: ARCHITECTURE.md  INTEGRATION_GUIDE.md  anti-patterns.yaml  invariants.yaml
docs/adr/: 001-extension-point-architecture.md
evaluator/: client.py  csv_io.py  schemas.py
golden/integrations/default/: expected_output.json
golden/integrations/shared/: input.json
golden/writers/airtable/: expected_output.json
golden/writers/csv/: expected_output.json
harness/: harness.py  registry.py  schema.py
harness/evals/: reply_eval.py  spec_compliance.py
harness/integrations/: base.py
harness/validators/: consistency_checker.py  golden_validator.py  schema_validator.py  structural_linter.py
rauda_core/: __init__.py  config.py  schemas.py
rauda_core/integrations/: __init__.py  default.py  registry.py
rauda_core/interfaces/: __init__.py  integration.py  workflow.py  writer.py
rauda_core/workflows/: code_step.py  llm_step.py  runner.py
rauda_core/writers/: __init__.py  airtable_writer.py  csv_writer.py
tests/: test_client.py  test_config.py  test_csv_io.py  test_schemas.py  test_writers.py
(+1 files in other folders)
